# cyclomatic-complexity-clang-plugin

./: CMakeLists.txt  README.md
include/: CyclomaticComplexity.h
src/: CyclomaticComplexity.cpp
